# pytermtables

./: CHANGELOG.md  LICENSE.txt  README.md  homes.csv  setup.cfg  setup.py  terminaltables.py
pytermtables/: pytermtables.py
pytermtables.egg-info/: PKG-INFO  SOURCES.txt
terminaltables.egg-info/: PKG-INFO  SOURCES.txt
