[metadata]
name = pytermtables
version = 0.0.1
author = William Redding
author_email = williamdredding@gmail.com
description = CSV Tables in the python console
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Spacerulerwill/TerminalTables
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True